2008-12-26  Adam Dingle  <adam@medovina.org>

	reviewed by: Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/anjuta-symbol-db.glade:
	Fixed #565706 – trailing period in symbol-db labels

2008-12-26  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/symbol-db-view-search.c
	(sdb_view_search_model_filter),
	(sdb_view_search_on_entry_key_press_event), (sdb_view_search_init):
	fix #565700 – Enter key inserts garbage into Symbols / Search box

2008-12-26  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (on_project_element_added),
	(do_import_project_sources_after_abort),
	(do_import_project_sources), (do_check_offline_files_changed):
	* plugins/symbol-db/symbol-db-engine-core.c
	(on_scan_update_files_symbols_end),
	(symbol_db_engine_update_files_symbols):
	* plugins/symbol-db/symbol-db-view-locals.c
	(symbol_db_view_locals_update_list):
	added some checks that fix some local-view updating problems.

2008-12-26  Johannes  Schmid <jhs@gnome.org>

	* Makefile.am:
	* configure.in:
	* global-tags/.cvsignore:
	* global-tags/Makefile.am:
	* global-tags/create_global_tags.sh.in:
	* global-tags/tm_global_tags.c:
	* plugins/Makefile.am:
	* plugins/editor/Makefile.am:
	* plugins/editor/aneditor-calltip.cxx:
	* plugins/editor/aneditor-priv.h:
	* plugins/editor/aneditor.cxx:
	* plugins/editor/text_editor.h:
	* plugins/search/Makefile.am:
	* plugins/search/search-replace.c (save_not_opened_files):
	* plugins/search/search-replace_backend.c
	(file_buffer_new_from_te), (file_buffer_new_from_path),
	(create_search_entries):
	* plugins/sourceview/Makefile.am:
	* plugins/symbol-browser/.cvsignore:
	* plugins/symbol-browser/Makefile.am:
	* plugins/symbol-browser/an_symbol.c:
	* plugins/symbol-browser/an_symbol.h:
	* plugins/symbol-browser/an_symbol_info.c:
	* plugins/symbol-browser/an_symbol_info.h:
	* plugins/symbol-browser/an_symbol_iter.c:
	* plugins/symbol-browser/an_symbol_iter.h:
	* plugins/symbol-browser/an_symbol_prefs.c: